--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "dependencies": {
     "express": "^4.17.1",
-    "socketio": "^1.0.0"
+    "socket.io": "^2.3.0"
   },
   "devDependencies": {}
 }
